# CAD-Exchanger-Curves

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/curve/: circle.cpp  circle.h  curve.h  ellipse.cpp  ellipse.h  helix.cpp  helix.h  utils.cpp  utils.h
src/factories/: base_random_curve_factory.h  random_factories.cpp  random_factories.h
